syntax = "proto3";
option java_package = "com.ftemulator.FTEmulator_api.proto.auth";

service Utils {
    // AuthStatus
    rpc AuthStatus (AuthStatusRequest) returns (AuthStatusResponse);

    // ProfileStatus
    rpc ProfileStatus (ProfileStatusRequest) returns (ProfileStatusResponse);
}

// AuthStatus
message AuthStatusRequest {}

message AuthStatusResponse {
    bool ok = 1;
}

// ProfileStatus
message ProfileStatusRequest {}

message ProfileStatusResponse {
    bool ok = 1;
}